@@ -299,6 +299,8 @@ dnl		MRNET_CXXFLAGS="${MRNET_CXXFLAGS} -I${MRNET_HOME}/src/src -Dos_linux"
 dnl		AC_SUBST(MRNET_CXXFLAGS)
 dnl		dnl End hack
 
+		MRNET_CXXFLAGS="${MRNET_CXXFLAGS} -I${MRNET_LIBSDIR}/mrnet-4.0.0/include -I${MRNET_LIBSDIR}/xplat-4.0.0/include"
+
 		AC_MSG_CHECKING([for lightweight libraries for the back-ends])
 		AC_ARG_WITH(lightweight,
 			AC_HELP_STRING(
@@ -311,8 +313,8 @@ dnl		dnl End hack
 		AC_MSG_RESULT([$light_libs])
 
 		dnl Check for MRNet header files.
-		CXXFLAGS="${CXXFLAGS} -I${MRNET_INCLUDES}/mrnet ${MRNET_CXXFLAGS}"
-		CPPFLAGS="${CPPFLAGS} -I${MRNET_INCLUDES}/mrnet ${MRNET_CXXFLAGS}"
+		CXXFLAGS="${CXXFLAGS} ${MRNET_CXXFLAGS}"
+		CPPFLAGS="${CPPFLAGS} ${MRNET_CXXFLAGS}"
 		AC_CHECK_HEADERS([MRNet.h], [], [MRNET_INSTALLED="no"])
 
 		dnl Check for libraries.
